# meraki_mcpv2

./: .gitignore  README.md  pyproject.toml  requirements.txt  simple_sse_test.py  test_mcp_server.py  text_analysis_test.py
.devcontainer/: devcontainer.json
src/meraki_mcp/: __init__.py  server.py
src/meraki_mcp/core/: __init__.py  meraki_client.py
src/meraki_mcp/knowledge/: __init__.py  base.py  wifi_kb.py
src/meraki_mcp/rf/: __init__.py  analyzer.py  models.py  rf_troubleshooter.py  spectrum.py
src/meraki_mcp/services/: __init__.py  meraki_service.py  service.py
src/meraki_mcp/tools/: __init__.py  appliance_tools.py  base.py  client_tools.py  device_tools.py  network_tools.py  organization_tools.py  rf_tools.py  switch_tools.py  wireless_tools.py
src/meraki_mcp/utils/: __init__.py  errors.py  models.py  nlp_test.py  text_analysis.py
src/meraki_mcp/wifi/: __init__.py  wifi_troubleshooter.py
